<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reorgLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GTPNavy"
    tools:context=".wms.activity.StockReorgActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/transport_origin"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/cbxReorgAddressOrigin"
        app:layout_constraintStart_toStartOf="@+id/cbxReorgAddressOrigin"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gtp.hunter.structure.spinner.SearchableSpinner
        android:id="@+id/cbxReorgAddressOrigin"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:dropDownWidth="match_parent"
        android:scrollbarSize="6dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/transport_destination"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxReorgAddressOrigin" />

    <com.gtp.hunter.structure.spinner.SearchableSpinner
        android:id="@+id/cbxReorgAddressDestination"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:dropDownWidth="match_parent"
        android:scrollbarSize="6dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/txtReorgQty"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/dyn_qty_int"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxReorgAddressDestination" />

    <SeekBar
        android:id="@+id/skbQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:progressDrawable="@drawable/purple_scrubber_progress"
        android:scaleX="1.05"
        android:scaleY="1.05"
        android:thumb="@drawable/purple_scrubber_control"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReorgQty" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReorgSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:scrollbarSize="6dp"
        android:text="@string/send"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/undProgressBar"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnReorgSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skbQuantity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtReorgProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:textColor="#FFFFFF"
                android:textSize="32sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>